--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "axios": "^1.7.7",
-    "next": "^14.2.14",
+    "next": "^15.0.3",
+    "next-intl": "^3.25.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
