--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@supabase/supabase-js": "^2.46.1",
     "axios": "^1.7.7",
     "next": "^15.0.3",
     "next-intl": "^3.25.0",
